Start implementing audio transcription restoration and Document AI production setup
Planning to implement:
- Restore deleted audio transcription functionality ('会議音声の文字起こしデータ' feature)
- Add WhisperAX modal for processing transcription text
- Implement Vercel Functions for Document AI processing in production
- Configure Google Cloud Document AI integration for both local and production environments
- Add proper environment variable handling for production deployment

🚧 Implementation in progress

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,11 @@ server.log
 temp/
 tmp/
 .vercel
+
+# Google Cloud credentials
+service-account-key.json
+*.json
+!package.json
+!package-lock.json
+!vercel.json
+!public/manifest.json
