--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "private": true,
     "description": "KJ法アシストツール - 住民の意見を整理・分析するためのReactアプリケーション",
     "dependencies": {
+        "@google-cloud/documentai": "^8.0.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "formidable": "^3.5.1",
         "react": "^18.2.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
